[package]
name = "dio"
version = "0.1.0"
authors = ["MovingtoMars <definitelynotliam@gmail.com>"]

[dependencies]
chan = "*"
gfx_device_gl = "*"
lazy_static = "*"
nalgebra = "*"
ncollide = "*"
nphysics2d = "*"
num = "*"
piston_window = "0.67.0"
rodio = "*"
rustc-serialize = "*"
shred = "0.4"
shred-derive = "*"
specs = "0.9"
