[package]
name = "dio"
version = "0.1.0"
authors = ["MovingtoMars <definitelynotliam@gmail.com>"]

[dependencies]
chan = "*"
gfx_device_gl = "*"
lazy_static = "*"
nalgebra = "*"
ncollide = "*"
num = "*"
piston_window = "0.67.0"
rodio = "*"
rustc-serialize = "*"
shred = "0.4"
shred-derive = "*"
specs = "0.9"

[dependencies.nphysics2d]
# path = "../nphysics/build/nphysics2d"
git = "https://github.com/MovingtoMars/nphysics.git"
